feat(VueButton): add font awesome icon support (#68)
closes #66

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -12,3 +12,4 @@
     color: #000 !important;
   }
 </style>
+<link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet" type="text/css">
