refactor(storybook): use @typings instead of custom types
closes #72

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,13 +1,18 @@
 <style>
   body {
     background-color: #333;
+    font-family:      'Alegreya Sans', Helvetica, sans-serif;
+    font-size:        16px;
   }
+
   h1, h2, td {
-    color: #fff !important;
+    color: #FFF !important;
   }
+
   pre {
     background-color: #000 !important;
   }
+
   th {
     color: #000 !important;
   }
