feat(components): add VueIcon (#91)
closes #69

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,7 @@
     background-color: #333;
     font-family:      'Alegreya Sans', Helvetica, sans-serif;
     font-size:        16px;
+    color:            white;
   }
 
   h1, h2, td {
@@ -17,4 +18,4 @@
     color: #000 !important;
   }
 </style>
-<link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet" type="text/css">
+<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet" type="text/css">
