feat(components): add vue-autocomplete (#97)
closes #58

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,9 +1,18 @@
 <style>
+  * {
+    box-sizing: border-box;
+  }
+
   body {
-    background-color: #333;
     font-family:      'Alegreya Sans', Helvetica, sans-serif;
-    font-size:        16px;
-    color:            white;
+    font-size:        16px
+    font-weight:      300;
+    color:            #FFF;
+    background-color: #333;
+    padding:          0;
+    margin:           0;
+    letter-spacing:   0.5px;
+    line-height:      1.47;
   }
 
   h1, h2, td {
