refactor(components): add storybook; remove form; add badge (#123)
closes #57

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,16 +3,20 @@
     box-sizing: border-box;
   }
 
+  html {
+    font-size: 62.5%
+  }
+
   body {
     font-family:      'Alegreya Sans', Helvetica, sans-serif;
-    font-size:        16px
+    font-size:        1.6em;
     font-weight:      300;
     color:            #FFF;
     background-color: #333;
     padding:          0;
     margin:           0;
     letter-spacing:   0.5px;
-    line-height:      1.47;
+    line-height:      1.6;
   }
 
   h1, h2, td {
