--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -7,16 +7,14 @@
     font-size: 62.5%
   }
 
-  body {
-    font-family:      'Alegreya Sans', Helvetica, sans-serif;
-    font-size:        1.6em;
-    font-weight:      300;
-    color:            #FFF;
-    background-color: #333;
-    padding:          0;
-    margin:           0;
-    letter-spacing:   0.5px;
-    line-height:      1.6;
+  body, .vue-info {
+    font-family:      'Alegreya Sans', Helvetica, sans-serif !important;
+    font-size:        1.6rem !important;
+    font-weight:      300 !important;
+    color:            #FFF !important;
+    background-color: #333 !important;
+    letter-spacing:   0.5px !important;
+    line-height:      1.6 !important;
   }
 
   h1, h2, td {
@@ -24,7 +22,7 @@
   }
 
   pre {
-    background-color: #000 !important;
+    background-color: #FFF !important;
   }
 
   th {
