--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -28,5 +28,11 @@
   th {
     color: #000 !important;
   }
+
+  i svg {
+    height: 32px;
+    width:  32px;
+    fill:   #FFF;
+  }
 </style>
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet" type="text/css">
