docs: add design system storybook integration (#275)
related to #133

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,143 +1,14 @@
 <style>
-  @import url('https://fonts.googleapis.com/css?family=Barlow:100,300,500,700');
-
-  /*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
-  html,
-  body,
-  p,
-  ol,
-  ul,
-  li,
-  dl,
-  dt,
-  dd,
-  blockquote,
-  figure,
-  fieldset,
-  legend,
-  textarea,
-  pre,
-  iframe,
-  hr,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin:  0;
-    padding: 0;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size:   100%;
-    font-weight: normal;
-  }
-
-  ul {
-    padding: 0 0 0 3.2rem;
-  }
-
-  button,
-  input,
-  select,
-  textarea {
-    margin: 0;
-  }
-
-  html {
-    box-sizing: border-box;
-  }
-
-  *, *:before, *:after {
-    box-sizing: border-box;
-  }
-
-  img,
-  embed,
-  iframe,
-  object,
-  audio,
-  video {
-    height:    auto;
-    max-width: 100%;
-  }
-
-  iframe {
-    border: 0;
-  }
-
-  table {
-    border-collapse: collapse;
-    border-spacing:  0;
-  }
-
-  td,
-  th {
-    padding:    0;
+  .vue-info {
     text-align: left;
-    color:      #000 !important;
   }
 
-  .tag {
-    color:      #000 !important;
-    background: #FFF !important;
+  .info-header h1 {
+    margin:    32px 0 24px 0 !important;
+    font-size: 48px;
   }
 
-  .hljs-tag, .hljs-attr, .hljs-tag {
-    color: #000 !important;
-  }
-
-  html {
-    font-size: 62.5%
-  }
-
-  body, .vue-info {
-    font-family:      'Barlow', Helvetica, sans-serif !important;
-    font-size:        1.6rem !important;
-    font-weight:      300 !important;
-    color:            #000 !important;
-    background-color: #FFF !important;
-    letter-spacing:   normal !important;
-    line-height:      2.4rem !important;
-  }
-
-  i {
-    display: inline-block;
-    height:  1.6rem;
-    width:   1.6rem;
-  }
-
-  i svg {
-    height: inherit;
-    width:  inherit;
-    fill:   currentColor !important;
-    stroke: currentColor !important;
-  }
-
-  i g {
-    stroke: currentColor !important;
-  }
-
-  a {
-    font-weight: 400;
-  }
-
-  small {
-    font-size: 80%;
-  }
-
-  strong {
-    font-weight: 700;
-  }
-
-  a {
-    color:       #008EAA;
-    font-weight: 500;
+  .component-name {
+    margin:    32px 0 24px 0;
   }
 </style>
