fix(tests): get rid of wrapper:any
related to #284

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,14 +1,14 @@
 <style>
-  .vue-info {
-    text-align: left;
+  .vue-info thead {
+    color: #4f4f4f !important;
   }
-
-  .info-header h1 {
-    margin:    32px 0 24px 0 !important;
-    font-size: 48px;
+  .hljs-attr {
+    color: #005c5c !important;
   }
-
-  .component-name {
-    margin:    32px 0 24px 0;
+  .section-title {
+    margin-bottom: 32px !important;
+  }
+  .vue-info table {
+    margin-bottom: 32px !important;
   }
 </style>
