refactor(design-system): color-palette (#370)

--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,3 +1,7 @@
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto+Condensed:200,400,600|Source+Sans+Pro:200,400,600"
+  rel="stylesheet"
+/>
 <style>
   .vue-info thead {
     color: #4f4f4f !important;
