chore(storybook): apply brand colors

--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -4,10 +4,14 @@
 />
 <style>
   .vue-info thead {
-    color: #4f4f4f !important;
+    color: #313131 !important;
   }
   .hljs-attr {
-    color: #005c5c !important;
+    color: #044 !important;
+  }
+  .hljs-string,
+  .hljs-doctag {
+    color: #760c26 !important;
   }
   .section-title {
     margin-bottom: 32px !important;
