chore(brand): iteration on colors and typo (#392)

--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,17 +1,14 @@
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto+Condensed:200,400,600|Source+Sans+Pro:200,400,600"
-  rel="stylesheet"
-/>
+<link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
 <style>
   .vue-info thead {
     color: #313131 !important;
   }
   .hljs-attr {
-    color: #044 !important;
+    color: #0c6410 !important;
   }
   .hljs-string,
   .hljs-doctag {
-    color: #760c26 !important;
+    color: #a11 !important;
   }
   .section-title {
     margin-bottom: 32px !important;
