--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -5,7 +5,7 @@
   }
 
   pre code {
-      background: #f8f8f8 !important;
+    background: #f8f8f8 !important;
   }
 
   .hljs-attr {
@@ -20,5 +20,8 @@
   }
   .vue-info table {
     margin-bottom: 32px !important;
+  }
+  .sb-show-main {
+    padding: 32px !important;
   }
 </style>
