--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,4 +1,4 @@
-<link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Inter:200,400,600&display=swap" rel="stylesheet" />
 <style>
   .props-head {
     color: #000 !important;
