--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Inter:200,400,600&display=swap" rel="stylesheet" />
 <style>
-  #storybook-panel-root {
-    background: #393d47 !important;
+  #root {
+    padding: 1.6rem;
   }
 </style>
