refactor(design-system): update color-tokens and text-styles (#543)
closes #513

--- a/.vuesion/storybook/manager-head.html
+++ b/.vuesion/storybook/manager-head.html
@@ -1,8 +1,8 @@
 <link href="https://fonts.googleapis.com/css?family=Inter:200,400,600&display=swap" rel="stylesheet" />
 <style>
   #storybook-panel-root {
-    background: #393d47 !important;
-    color: #b6b7bb !important;
+    background: #21272a !important;
+    color: #f2f4f8 !important;
   }
 
   #storybook-panel-root h1,
@@ -15,10 +15,14 @@
   #storybook-panel-root span,
   #storybook-panel-root label,
   #storybook-panel-root div {
-    color: #b6b7bb !important;
+    color: #f2f4f8 !important;
   }
 
   #storybook-panel-root thead {
-    background: #131416;
+    background: #121619;
+  }
+  #storybook-panel-root .tabbutton-active {
+    color: #fff !important;
+    border-bottom-color: #4589ff !important;
   }
 </style>
