--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,1 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Inter:200,400,600&display=swap" rel="stylesheet" />
+<link
+  href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800|Lora:300,400,500,600,700,800&display=swap"
+  rel="stylesheet"
+/>
